query the reflow path only during incr. reflow bug 264620 r/sr=bzbarsky