layout/tables/nsTableOuterFrame.cpp
@@ -1313,7 +1313,7 @@ nsTableOuterFrame::OuterReflowChild(nsPresContext*            aPresContext,
   }
   // see if we need to reflow the caption in addition
   if (aNeedToReflowCaption && !*aNeedToReflowCaption &&
-      mInnerTableFrame == aChildFrame) {
+      mInnerTableFrame == aChildFrame && childRS.reason == eReflowReason_Incremental) {
     nsHTMLReflowCommand* command = childRS.path->mReflowCommand;
     if (command) {
       nsReflowType type;
